
* Compiler changes:

 - Generated C functions now have readable names corresponding to appropriate
   Lisp function names (M. Pasternacki)

 - ECL now compiles with the free Microsoft Visual C++ Toolkit
   2003. Instructions are provided on how to do it.

 - Unless SI:*KEEP-DOCUMENTATION* = NIL, the documentation of functions is
   stored in the compiled files.

* Errors fixed:

 - Now .o files compiled with :SYSTEM-P T with dash in filename load
   correctly. (M. Pasternacki)

 - Incorrectly loaded files are now unloaded without falling into infinite
   loop.  (M. Pasternacki)

 - When ECASE or CTYPECASE signal a TYPE-EROR the TYPE-ERROR-DATUM is the value
   that originated the error.

 - FDEFINITION did not signal a type error when passed things like '(SETF A B).

 - FUNCTION-LAMBDA-EXPRESSION does not fail, but does nothing useful, when
   passed a generic function.

 - Trying to execute an instance object that is not a generic function does no
   longer crashes ECL.

 - When signalling a READER-ERROR, the field reader-error-stream was not bound.

 - The random number generator assumed 32-bit integers.

 - ext:run-program looks into *standard-input/output* and *error-output* for handle
   duplication also under Win32.

 - FEtype_error_index() had format arguments in wrong order (M. Goffioul).

 - In the LOOP macro, variables are initialized with values of their type, no
   longer producing code like (LET ((C NIL)) (DECLARE (CHARACTER C)) ...)

 - The compiler now advertises itself with PROVIDE so that issuing (REQUIRE
   'CMP) twice does not cause the compiler to be loaded twice.

 - Fix error message of interpreted FFI:CLINES form (M. Goffioul).

 - Remove obsolete C::BUILD-ECL documentation (M. Goffioul).

 - The conversion from ratio to float works now even if the numerator/denominator
   are themselves too large to fit a float.

* ANSI compatibility:

 - Several functions that signaled type-errors did not set the right values